# RustPlayerUI

./: .gitignore  Cargo.toml  WALKTHROUGH.md  install-ui.sh  music-player-ui.service
.cargo/: config.toml
src/: api.rs  app_state.rs  callbacks.rs  config.rs  main.rs  main.slint  physics.rs  player_sync.rs  touch.rs  touch_handlers.rs  ui_utils.rs  warp.rs
src/app/: mod.rs  state.rs
src/screens/: mod.rs  player.rs  selector.rs  track_picker.rs
src/services/: library.rs  mod.rs  playback.rs
