[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
slint = { version = "1.15.1", features = ["renderer-femtovg", "std", "backend-default", "backend-linuxkms"] }
log = "0.4.22"
env_logger = "0.11.6"
image = "0.25.10"

[build-dependencies]
slint-build = "1.15.1"
